--- a/index.html
+++ b/index.html
@@ -477,7 +477,8 @@
     // - Auto-apply filters
     // ==============================
 
-    const DATA_URL = "./data_v13_med_high.json";
+
+const DATA_URL = "./data_house_kor_single_fixed_merged.json";
 
     // Korea bbox (대략)
     const KOREA_BBOX = { minLat: 33.0, maxLat: 39.8, minLng: 124.0, maxLng: 132.0 };
