--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
 <script>
   // ====== CONFIG ======
-  const DATA_URL = "./data_house_kor_single_fixed_merged.json";
+const DATA_URL = "./data_public.json";
   const LIST_MAX = 200;
 
   // 외부 이미지 출처 노출/단서 방지(화이트리스트만 허용)
