--- a/index.html
+++ b/index.html
@@ -42,31 +42,28 @@
       min-height:0;
     }
 
-    /* ===== TOPBAR: 제목 중앙/크게 ===== */
+    /* ===== TOPBAR: 좌측 정렬 + 세로 중앙 ===== */
     .topbar{
       flex:0 0 auto;
       position:sticky; top:0; z-index:6000;
       background:linear-gradient(180deg, rgba(12,13,14,.98), rgba(12,13,14,.85));
       border-bottom:1px solid var(--line);
-      padding:22px 16px 20px;
-      display:grid;
-      grid-template-columns: 1fr auto 1fr;
-      align-items:center;
+      padding:20px 16px;
+      display:flex;
+      align-items:center;         /* ★ 상하(세로) 중앙 */
+      justify-content:space-between;
       gap:12px;
     }
-    .titleCenter{
-      grid-column:2;
-      font-size:30px;
+    .titleLeft{
+      font-size:30px;             /* 제목 크게 */
       font-weight:1000;
       letter-spacing:.2px;
       color:#e9eef7;
       line-height:1.08;
-      text-align:center;
+      text-align:left;            /* ★ 좌측 */
       white-space:nowrap;
     }
     .pill{
-      grid-column:3;
-      justify-self:end;
       display:inline-flex; align-items:center; gap:8px;
       padding:8px 12px;
       border-radius:999px;
@@ -75,17 +72,18 @@
       box-shadow:0 8px 18px rgba(0,0,0,.25);
       font-size:12px;
       color:#e9eef7;
+      flex:0 0 auto;
     }
     .pill b{color:var(--mint); font-weight:1000}
 
-    /* ===== FILTER BAR: 콤팩트 좌측 정렬 + 자동적용(적용버튼 제거) ===== */
+    /* ===== FILTER BAR: 콤팩트 좌측 정렬 + 자동적용 ===== */
     .filtersRow{
       flex:0 0 auto;
-      position:sticky; top:72px; z-index:5500; /* topbar 아래 */
+      position:sticky; top:72px; z-index:5500;
       background:rgba(12,13,14,.92);
       backdrop-filter: blur(6px);
       border-bottom:1px solid var(--line);
-      padding:12px 16px 12px;
+      padding:12px 16px;
     }
     .filtersInner{
       display:flex;
@@ -93,7 +91,7 @@
       gap:10px;
       flex-wrap:wrap;
       justify-content:flex-start;
-      max-width:1100px; /* 너무 벌어지지 않게 */
+      max-width:1100px;
     }
     input[type="text"], select{
       height:40px;
@@ -107,15 +105,8 @@
     }
     input[type="text"]::placeholder{color:var(--inputPh)}
     option{background:#0c0e10; color:#eef3ff;}
-
-    .q{
-      width:min(420px, 92vw); /* 검색 폭 줄임 */
-      flex:0 0 auto;
-    }
-    .cat{
-      width:260px;
-      flex:0 0 auto;
-    }
+    .q{ width:min(420px, 92vw); }
+    .cat{ width:260px; }
     .btn{
       height:40px;
       border-radius:12px;
@@ -129,12 +120,12 @@
       font-size:13px;
     }
 
-    /* ===== APP LAYOUT: 리스트 더 넓게, 지도 조금 줄임 ===== */
+    /* ===== APP LAYOUT: 리스트 더 넓게 ===== */
     .app{
       flex:1 1 auto;
       min-height:0;
       display:grid;
-      grid-template-columns: minmax(820px, 45vw) 1fr;  /* ★ 좌측 확장 */
+      grid-template-columns: minmax(820px, 45vw) 1fr;
     }
     @media (max-width: 1250px){
       .app{grid-template-columns: minmax(720px, 48vw) 1fr;}
@@ -148,7 +139,7 @@
     .panel{
       background:var(--panel);
       border-right:1px solid var(--line);
-      overflow:auto;            /* ★ 여기만 스크롤 */
+      overflow:auto;           /* ★ 여기만 스크롤 */
       padding:14px;
       min-height:0;
     }
@@ -163,7 +154,7 @@
       box-shadow:var(--shadow);
     }
 
-    /* ===== STATS BAR: 패널 상단 고정 + OFF 제거 ===== */
+    /* ===== STATS ===== */
     .statsSticky{
       position:sticky;
       top:0;
@@ -187,7 +178,7 @@
       border-radius:999px;
       border:1px solid rgba(255,255,255,.12);
       background:rgba(0,0,0,.22);
-      font-size:13px;           /* 폰트 조금 키움 */
+      font-size:13px;
       color:var(--muted);
       white-space:nowrap;
     }
@@ -269,11 +260,11 @@
     }
     #map{width:100%; height:100%; background:#0b0c0d;}
 
-    /* ===== MARKERS: 링 제거, 색만 변경 ===== */
+    /* ===== MARKERS (링 없음 / 색만 변경) ===== */
     .pinWrap{filter: drop-shadow(0 6px 10px rgba(0,0,0,.45));}
     .pinHover{filter: drop-shadow(0 10px 16px rgba(0,0,0,.55));}
 
-    /* ===== CLUSTER COLORS (명확) ===== */
+    /* ===== CLUSTER COLORS ===== */
     .marker-cluster-small{ background-color: rgba(42, 158, 255, 0.40) !important; }
     .marker-cluster-small div{ background-color: rgba(42, 158, 255, 0.70) !important; color:#fff !important; font-weight:1000 !important; }
     .marker-cluster-medium{ background-color: rgba(255, 159, 67, 0.42) !important; }
@@ -360,8 +351,7 @@
 
 <body>
   <div class="topbar" id="topbar">
-    <div></div>
-    <div class="titleCenter">Frontier DOOH 전국 DB</div>
+    <div class="titleLeft">Frontier DOOH 전국 DB</div>
     <div class="pill">Loaded: <b id="pillLoaded">0</b></div>
   </div>
 
@@ -406,7 +396,6 @@
     </div>
   </div>
 
-  <!-- Detail overlay -->
   <div class="detailOverlay" id="dOverlay">
     <div class="detail">
       <div class="detailHead">
@@ -460,17 +449,17 @@
   let ALL = [];
   let map = null;
   let markers = null;
-
   const markerByKey = new Map();
 
   const BATCH = 36;
   const STEP  = 24;
   let renderLimit = BATCH;
-  let curFilteredBase = [];
   let curInView = [];
 
-  const $ = (id) => document.getElementById(id);
+  let currentOpenKey = null;        // ★ 현재 열린 아이템 키
+  let suppressHashHandler = false;  // ★ 해시 변경 루프 방지
 
+  const $ = (id) => document.getElementById(id);
   function addOption(sel, value, label){
     const o = document.createElement("option");
     o.value = value;
@@ -554,11 +543,11 @@
     CATEGORY_TREE.map(x=>x.high).forEach(v => addOption(sel, v, v));
   }
 
-  // ====== 자동 적용(디바운스) ======
+  // ===== 자동 적용(디바운스) =====
   let timer = null;
-  function debounceRender(fit){
+  function debounce(fn, ms){
     clearTimeout(timer);
-    timer = setTimeout(()=>render(fit), 220);
+    timer = setTimeout(fn, ms);
   }
 
   function getFilteredBase(){
@@ -574,7 +563,6 @@
       });
     }
     if (high) arr = arr.filter(x => x._high === high);
-
     return arr;
   }
 
@@ -586,7 +574,7 @@
     return b.isValid() ? b : null;
   }
 
-  /* ====== PIN ICONS (링 없음) ====== */
+  /* ===== PIN ICONS ===== */
   function pinSvg(fill, stroke){
     return `
       <div class="pinWrap">
@@ -654,7 +642,6 @@
     });
 
     map.addLayer(markers);
-
     map.on("moveend", () => render(false));
   }
 
@@ -670,24 +657,39 @@
 
   function renderMarkers(items){
     clearMarkers();
-    items.forEach((it) => {
+
+    const ms = [];
+    for (const it of items){
       const m = L.marker([it.lat, it.lng], { icon: normalIcon });
       m.on("click", () => openDetail(it, true));
       markerByKey.set(it._key, m);
-      markers.addLayer(m);
-    });
+      ms.push(m);
+    }
+
+    // ★ addLayers + refreshClusters로 “클러스터 숫자 갱신” 강제
+    markers.addLayers(ms);
+    if (typeof markers.refreshClusters === "function") markers.refreshClusters();
   }
 
-  // ====== 해시 라우팅 ======
+  // ===== HASH ROUTING (루프 방지) =====
   function setHash(key){
     const next = "#item=" + encodeURIComponent(key);
-    if (location.hash !== next) location.hash = next;
+    if (location.hash !== next){
+      suppressHashHandler = true;
+      location.hash = next;
+      setTimeout(()=>{ suppressHashHandler = false; }, 0);
+    }
   }
   function clearHash(){
-    if (location.hash.startsWith("#item=")) history.replaceState(null, "", location.pathname);
+    if (!location.hash.startsWith("#item=")) return;
+    suppressHashHandler = true;
+    location.hash = "";
+    setTimeout(()=>{ suppressHashHandler = false; }, 0);
   }
 
   function openDetail(it, sethash){
+    currentOpenKey = it._key;
+
     $("dt").textContent = it.title || "-";
     $("ds").textContent = `${it._high || "-"}${it._low ? " > " + it._low : ""}`;
 
@@ -708,24 +710,28 @@
     `;
 
     $("dOverlay").style.display = "block";
-
-    // 클릭 시 지도도 해당 위치로
     map.setView([it.lat, it.lng], Math.max(map.getZoom(), 15));
 
     if (sethash) setHash(it._key);
   }
 
-  function closeDetail(){
+  function closeDetail(fromHashChange){
     $("dOverlay").style.display = "none";
-    clearHash();
+    currentOpenKey = null;
+
+    // X로 닫을 때는 해시도 확실히 제거
+    if (!fromHashChange) clearHash();
   }
 
   function openDetailByHash(){
     if (!location.hash.startsWith("#item=")) return;
     const key = decodeURIComponent(location.hash.replace("#item=", ""));
+    if (currentOpenKey === key && $("dOverlay").style.display === "block") return;
+
     const it = ALL.find(x => x._key === key);
     if (!it) return;
-    openDetail(it, false); // 해시는 이미 있으니 재설정 불필요
+
+    openDetail(it, false);
   }
 
   function renderList(items){
@@ -769,10 +775,7 @@
 
       el.addEventListener("mouseenter", () => highlightMarker(it._key));
       el.addEventListener("mouseleave", () => unhighlightMarker(it._key));
-
-      el.addEventListener("click", () => {
-        openDetail(it, true); // 클릭하면 해시 반영
-      });
+      el.addEventListener("click", () => openDetail(it, true));
 
       list.appendChild(el);
     }
@@ -794,7 +797,12 @@
 
   function render(shouldFit){
     const base = getFilteredBase();
-    curFilteredBase = base;
+
+    // ★ 현재 열린 아이템이 필터에서 사라졌으면: 모달 닫고 해시 제거
+    if (currentOpenKey){
+      const exists = base.some(x => x._key === currentOpenKey);
+      if (!exists) closeDetail(false);
+    }
 
     const b = map.getBounds();
     const inView = base.filter(x => b.contains([x.lat, x.lng]));
@@ -812,11 +820,10 @@
       if (bb) map.fitBounds(bb, { padding:[60,60], maxZoom: 14 });
     }
 
-    // 해시가 있으면 항상 열어줌(새로고침 포함)
-    openDetailByHash();
+    // ★ render()에서는 해시 기반 자동 오픈을 하지 않는다 (HUNG 루프 방지)
   }
 
-  // ====== 상단 영역에서 휠을 돌려도 리스트만 스크롤 되도록 강제 ======
+  // 상단 영역 휠 → 리스트로만 전달(원래 동작 유지)
   function forwardWheelToPanel(el){
     el.addEventListener("wheel", (e)=>{
       const panel = $("panel");
@@ -844,32 +851,39 @@
 
     setCatHighOptions();
 
-    // 자동 적용: 검색/카테고리 변경 즉시 반영
     $("catHigh").addEventListener("change", () => render(true));
-    $("q").addEventListener("input", () => debounceRender(true));
+    $("q").addEventListener("input", () => debounce(()=>render(true), 220));
     $("q").addEventListener("keydown", (e)=>{ if (e.key === "Enter") render(true); });
 
     $("reset").addEventListener("click", () => {
       $("q").value = "";
       $("catHigh").value = "";
-      closeDetail();
+      closeDetail(false);
       render(true);
     });
 
-    $("dx").addEventListener("click", closeDetail);
-    $("dOverlay").addEventListener("click", (e) => { if (e.target.id === "dOverlay") closeDetail(); });
+    $("dx").addEventListener("click", () => closeDetail(false));
+    $("dOverlay").addEventListener("click", (e) => { if (e.target.id === "dOverlay") closeDetail(false); });
 
     window.addEventListener("hashchange", () => {
-      if (location.hash.startsWith("#item=")) openDetailByHash();
-      else closeDetail();
+      if (suppressHashHandler) return;
+
+      if (location.hash.startsWith("#item=")){
+        openDetailByHash();
+      }else{
+        // 해시가 없어지면 모달만 닫는다(해시는 이미 없음)
+        closeDetail(true);
+      }
     });
 
-    // 휠 포워딩: 상단/필터 위에서 돌려도 리스트만 움직이게
     forwardWheelToPanel($("topbar"));
     forwardWheelToPanel($("filtersRow"));
 
-    // 초기 렌더
+    // 1) 첫 렌더
     render(false);
+
+    // 2) 최초 로드시 해시가 있으면 그때만 열기
+    openDetailByHash();
   }
 
   init();
